Populating data from find result set for sessiones
