# build/swagger.json
@@ -61,6 +61,40 @@
 				"type": "object",
 				"additionalProperties": false
 			},
+			"GymSession": {
+				"properties": {
+					"dayHour": {
+						"items": {
+							"type": "string",
+							"format": "date-time"
+						},
+						"type": "array"
+					},
+					"instructors": {
+						"items": {
+							"type": "string"
+						},
+						"type": "array"
+					},
+					"serviceId": {
+						"type": "string"
+					},
+					"available": {
+						"type": "boolean"
+					},
+					"_id": {
+						"type": "string"
+					}
+				},
+				"required": [
+					"dayHour",
+					"instructors",
+					"serviceId",
+					"available"
+				],
+				"type": "object",
+				"additionalProperties": false
+			},
 			"Service": {
 				"properties": {
 					"name": {
@@ -256,6 +290,33 @@
 						"application/json": {
 							"schema": {
 								"$ref": "#/components/schemas/GetParamsBody"
+							}
+						}
+					}
+				}
+			}
+		},
+		"/api/sessions/create": {
+			"post": {
+				"operationId": "CreateSession",
+				"responses": {
+					"200": {
+						"description": "Ok",
+						"content": {
+							"application/json": {
+								"schema": {}
+							}
+						}
+					}
+				},
+				"security": [],
+				"parameters": [],
+				"requestBody": {
+					"required": true,
+					"content": {
+						"application/json": {
+							"schema": {
+								"$ref": "#/components/schemas/GymSession"
 							}
 						}
 					}
